ui/components/app/modals/contract-details-modal/index.scss
.contract-details-modal {
  width: 360px !important;

  &__content {
    border-bottom: 1px solid var(--color-border-muted);

    &__contract {
      &__identicon {
        margin: 16px 16px 38px 16px;
      }

      &__buttons {
        flex-grow: 1;

        &__copy.btn-link {
          padding: 0;
        }

        &__block-explorer.btn-link {
          padding: 0;
        }
      }
    }
  }

  &__footer {
    button + button {
      margin-inline-start: 1rem;
    }
  }
}

